# a-treatise-on-the-hostile-mesh

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
apps/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/ui/public/portraits/: .gitkeep
apps/ui/src/: App.tsx  main.tsx  registry.ts  types.ts  vite-env.d.ts
apps/ui/src/components/: BattleNarrator.tsx  BattlePortrait.tsx  Countdown.tsx  ErrorBoundary.tsx  HitSparks.tsx  JudgeStrip.tsx
apps/ui/src/hooks/: useCountdown.ts  useEventStream.ts  useMatchState.ts
apps/ui/src/scenes/: ArenaScene.tsx  LandingScene.tsx  LeaderboardScene.tsx  PlayerPickerScene.tsx  PostMatchScene.tsx
apps/ui/src/state/: store.ts
apps/ui/src/styles/: battle.css  globals.css  leaderboard.css  lobby.css  tokens.css
docs/: SUMMARY.md  axl-notes.md  decisions.md  event-schema.md
infra/axl/: README.md  build.sh
scripts/: bootstrap.sh  register_ens.py  register_sepolia_parent.py  run_demo.sh  stop_all.sh
services/arena/: __init__.py  api.py  commentary.py  event_bus.py  main.py  manager.py  workspace.py
services/chorus/: main.py
services/combatant/: main.py
tests/: conftest.py
tests/integration/: test_arena_api.py  test_axl_two_nodes.py  test_signed_claim_e2e.py  test_target_service.py  test_workspace_materialize.py
tests/unit/: test_bug_bank.py  test_envelope_codec.py  test_loop_detector.py  test_namehash.py  test_scoring.py  test_signing.py
