[project]
name = "hostile-mesh"
version = "0.1.0"
description = "A Treatise on the Hostile Mesh — peer-to-peer adversarial agent arena built on Gensyn AXL and ENS."
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.39",
  "openai>=1.55",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "aiohttp>=3.10",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",
  "web3>=7.5",
  "eth-account>=0.13",
  "eth-utils>=5.1",
  "eth-keys>=0.5",
  "rich>=13.9",
  "structlog>=24.4",
  "sse-starlette>=2.1",
  "tomli-w>=1.0",
  "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-httpx>=0.34",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["packages", "services"]
include = ["hostile_mesh_*", "arena", "combatant", "chorus", "target"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["packages", "services"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC"]
ignore = ["E501", "B008"]
